# longquizsub

./: .gitignore  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
build_bikesharing/: Dockerfile
build_bikesharing/Application/: .gitignore  BicycleRentals_NEW.sln  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
build_bikesharing/Application/bikeshare_model/: .gitignore  __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
build_bikesharing/Application/bikeshare_model/config/: core.py
build_bikesharing/Application/bikeshare_model/processing/: .gitignore  data_manager.py  features.py
build_bikesharing/Application/requirements/: requirements.txt  test_requirements.txt
build_bikesharing/Application/tests/: conftest.py  test_features.py  test_predictions.py
build_bikesharing/bike_sharing_api/: .gitignore  readme.md  requirements.txt
build_bikesharing/bike_sharing_api/app/: __init__.py  api.py  config.py  main.py
build_bikesharing/bike_sharing_api/app/schemas/: health.py  predict.py
