[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BikeSharingRentals"
version = "0.1.18"
description = "Bike Sharing app prediction"
authors = [
    { name = "Srikrishnan Shankar", email = "srikrishnan.shankar@gmail.com" }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "pytest",
    "scikit-learn",
    "joblib",
    "pyyaml"
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.setuptools]
include-package-data = true